# Rutherford-s-experiment

./: .gitignore  Animation.kdev4  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/pap_animation/: shader.hpp
include/pap_animation/Pap_animation/: app.hpp  shader.hpp
include/pap_animation/Pap_animation/camera/: camera.hpp
include/pap_animation/Pap_animation/model/: model.hpp  texture.hpp  vertex.hpp
include/pap_animation/Pap_animation/objects/: molecule.hpp  render_object.hpp  vertecies.hpp
include/pap_animation/camera/: fly_camera.hpp  fps_camera.hpp  orbit_camera.hpp
include/pap_animation/model/: mesh.hpp  model.hpp
include/pap_animation/objects/: render_object.hpp  vertecies.hpp
objects/golden/: golden.mtl
objects/siatka/: siatka.mtl
shaders/: color_fragment.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex_text.glsl
src/: main.cpp
src/lib/: app.cpp  shader.cpp
src/lib/camera/: camera.cpp  fly_camera.cpp  fps_camera.cpp  orbit_camera.cpp
src/lib/model/: mesh.cpp  model.cpp
src/lib/objects/: molecule.cpp  render_object.cpp  vertecies.cpp
